<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notitie"
            android:icon="@drawable/ic_menu_notitie"
            android:title="@string/action_notitie" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_menu_agenda"
            android:title="@string/action_agenda" />
        <item
            android:id="@+id/nav_contactenlijs"
            android:icon="@drawable/ic_menu_contactenlijst"
            android:title="@string/action_contactenlijst" />

        <item
            android:id="@+id/nav_thema"
            android:icon="@drawable/ic_menu_thema"
            android:title="@string/action_thema" />

        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_menu_email"
            android:title="@string/action_email" />
    </group>

    <item android:title="Communicati">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />

        </menu>
    </item>

</menu>
